# evidence-sift-copilot

./: .env.example  LICENSE  README.md  pyproject.toml  run_benchmark.sh  run_synthetic.sh
cases/dfir-metric-web-obfuscation/: CLAUDE.md
cases/dfir-metric-web-obfuscation/analysis-agentic/: agent-planner.raw.txt  audit-log.jsonl  chain-of-custody.jsonl  claims.jsonl  plan.jsonl  report.md
cases/dfir-metric-web-obfuscation/evidence/dfir-metric-web-obfuscation/: answer_key.md  question.md
cases/synthetic-sift/: CLAUDE.md
cases/synthetic-sift/analysis/: audit-log.jsonl  chain-of-custody.jsonl  claims.jsonl  plan.jsonl  self-correction.md
cases/synthetic-sift/analysis-agentic/: agent-planner.raw.txt  audit-log.jsonl  chain-of-custody.jsonl  claim-review.raw.txt  plan.jsonl  report.md  self-correction.md
cases/synthetic-sift/evidence/sample-case/: answer_key.md  hashes.csv  known_bad_hashes.csv  processes.txt
docs/: README.md  accuracy-report.md  architecture.md  dataset.md  demo-script.md  devpost-form-details.md  devpost-submission-draft.md  judging-checklist.md  video-voiceover-script.md
src/: agentic_runner.py  benchmark_runner.py  case_investigator.py
tests/: test_guardrails.py
